# chicken-pi

./: .gitignore  README.md  chicken_control.py  chicken_device.py  chicken_dummy.py  chicken_graphs.py  chicken_relay.py  chicken_status.py  chicken_tsl2591.py  chickenpi.py  display_coop_values.py  environment.yml  gmailer.py  monitor_network.py  nws_forecast.py  outlet_timers.py  requirements.txt  run_chickenpi.py  setup.cfg  setup.py  temp_values.csv  todo.txt  wifi_check.py
chicken/: control.py  database.py  device.py  dummy.py  graphs.py  main.py  network.py  status.py  utils.py
chicken/config/: config.yaml-TEMPLATE
chicken/data/: README.md
chicken/logs/: README.md
chicken/resources/4channelRelay/: relay.py
depricated/: chicken_relay.py  outlet_timers.py
monitor_pi/: __init__.py  database.py  device.py  dummy.py  network.py  utils.py
monitor_pi/chicken/: control.py  graphs.py  main.py  status.py
monitor_pi/config/: monitor.conf-TEMPLATE
monitor_pi/resources/NOAA_API_v2/: noaa_api_v2.py
resources/4channelRelay/: relay.py
testing/: URL4clock.txt  blinky.py  calibrate_rotation_orientation.py  display_values.py  fit_calibrate.py  get_noaa_data.py  read_relay_bytes.sh  test_circuitpython.py  test_dht22.py  test_i2c.py  test_multigui.py  tsl2591_simpletest.py
