[metadata]
name = monitor_pi
version = 0.5.0
description = Collection of hardware-monitors for the Raspberry Pi
long_description = file: README.md
long_description_content_type = text/markdown
author = Timothy P. Ellsworth Bowers
author_email = tbowers7@gmail.com
license = LGPL-3
url = https://github.com/tbowers7/chicken-pi
edit_on_github = False
github_project = tbowers7/chicken-pi
keywords = monitor_pi
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Public License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Documentation :: Sphinx
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces

[options]
zip_safe = False
use_2to3=False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
include_package_data = True
install_requires =
    requests
    urllib3
    astropy>=4.0
    matplotlib
    numpy
    noaa_sdk
    JohnnyFive @ git+https://github.com/LowellObservatory/JohnnyFive

[options.entry_points]
console_scripts =

    # non-GUI scripts
    chicken_pi = monitor_pi.chicken.main:main
