[metadata]
name = chicken-pi
description = Code for the automated chicken coop using a Raspberry Pi
long_description = file: README.md
long_description_content_type = text/markdown
author = Timothy P. Ellsworth Bowers
author_email = chickenpi.flag@gmail.com
license = LGPL-3.0
url = https://github.com/tbowers7/chicken-pi
edit_on_github = False
github_project = tbowers7/chicken-pi
keywords = poultry
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Agriculture
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
use_2to3=False
packages = find:
python_requires = <=3.8
setup_requires = setuptools_scm
include_package_data = True
install_requires =
    adafruit-circuitpython-tsl2561
    adafruit-circuitpython-ahtx0
    adafruit-circuitpython-sht31d
    adafruit-circuitpython-motorkit
    adafruit-extended-bus
    astropy
    matplotlib
    noaa_sdk
    numpy
    requests
    urllib3
    setuptools
    setuptools_scm

[options.extras_require]
docs =
    sphinx
    sphinx-automodapi
    sphinx_rtd_theme

dev =
    sphinx
    sphinx-automodapi
    sphinx_rtd_theme
    pylint
    black

[options.entry_points]
console_scripts =
    chickenpi = chicken.main:entry_point
